# radicalpy

./: .gitignore  .readthedocs.yaml  CITATION.bib  LICENSE  MANIFEST.in  README.md  devnotes.md  profile_reader.py  pyproject.toml  requirements.txt  setup.bat  setup.py  setup.sh
.github/workflows/: add-to-project.yml  coverage.yaml  lint.yaml  publish-to-pypi.yaml  publish-to-pypi.yml  readme.md  run-tests.yaml  run-tests.yml
docs/: conf.py  index.rst  modules.rst  radicalpy.data.rst  radicalpy.rst  requirements.txt
docs/quick-start/: guide.org
examples/: FAD_kinetics.py  T1_T2_relaxation_rate.py  anisotropy_3d_polar.py  anisotropy_3d_polar_paper.py  anisotropy_3d_polar_paper_2.py  bhalf_data_comparison.py  bhalf_data_saver.py  bloch-redfield.py  cidnp.py  cidnp_new.ipynb  cidnp_s_t0.py  coherent_control.py  comparison.ipynb  data_plotter_kinetics_fad_semiclassical_wavelength.py  density_matrix_2d.py  density_matrix_3d.py  density_matrix_gif.py  energy_level.py  fad_ref_spectra.py  field_switching.py  kinetics_1.py  kinetics_2.py  kinetics_3.py  kinetics_cryptochrome.py  kinetics_fad.py  kinetics_fad_ph_dependence.py  kinetics_fad_quencher.py  kinetics_fad_semiclassical.py  kinetics_fad_semiclassical_wavelength.py  kinetics_fad_semmiclassical.py  kinetics_flavin_quencher.py  kinetics_simple.py  linblad.py  lindblad.py  linear_energy_level.py  lpmps.py  mary.py  mary_custom_input.py  mary_profile.py  matplotlibrc  (+28 more)
examples/data/: FMN.xyz  NH2.xyz  NH2_A.out  NH2_A.property.txt  bhalf_data_comparison.py  data_plotter_kinetics_fad_semiclassical_wavelength.py  fad_ref_spectra.py
examples/data/fad_kinetics/: FAD_pH21_kinetics.txt  FAD_pH21_kinetics_time.txt  FADpH21_data.txt  FADpH21_data_time.txt  easyspin_1nuc.txt  (+16 more)
examples/tutorials/: 01_what_are_radical_pairs_and_their_magnetic_interactions.ipynb  02_chemical_kinetics_and_molecular_motion.ipynb  02_molecular_motion.ipynb  03_introduction_to_spin_hamiltonians.ipynb  04_density_matrices_and_time_evolution.ipynb  05_incoherent_processes.ipynb  05_introduction_to_magnetic_field_effects.ipynb  06_MFEs.ipynb  06_introduction_to_ODMR.ipynb  07_ODMR.ipynb  07_introduction_to_CIDNP.ipynb  08_CIDNP.ipynb  colab-github-demo.ipynb
radicalpy/: __init__.py  classical.py  data.py  estimations.py  experiments.py  kinetics.py  plot.py  relaxation.py  semiclassical.py  shared.py  simulation.py  tensornetwork.py  tn.py  utils.py
radicalpy/data/: spin_data.json
radicalpy/data_files/: constants.json
src/: __init__.py
src/radicalpy/: TRP_3x3.py  TYRrad.py  __init__.py  classical.py  data.py  estimations.py  flavin_3x3.py  hfc3d.py  kinetics.py  pauli_matrices.py  plot.py  relaxation.py  simulation.py  trp.py  utils.py
src/tests/: radpy.py  test_data.py  test_estimations.py  test_relaxations.py  test_shared.py  test_simulation.py  test_utils.py
src/utils/: lintercheck.py  wip_experiments.py
tests/: radpy.py  test_data.py  test_estimations.py  test_radicalpy.py  test_relaxations.py  test_shared.py  test_simulation.py
tutorials/: 02_molecular_motion.ipynb  06_introduction_to_ODMR.ipynb  07_introduction_to_CIDNP.ipynb
utils/: constant_convert.py  wip_experiments.py
utils/hooks/: sphinx-apidoc
(+29 files in other folders)
