[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "radicalpy"
readme = "README.md"
dynamic = ["dependencies", "version"]
authors = [
  {name = "Emil Vatai",      email = "emil.vatai@gmail.com"},
  {name = "Lewis M. Antill", email = "lmantill@gmail.com"  }
]
keywords = ["simulation", "spin-dynamics", "radical pairs"]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/Spin-Chemistry-Labs/radicalpy"
documentation = "https://radicalpy.readthedocs.io/en/latest/"
source = "https://github.com/Spin-Chemistry-Labs/radicalpy"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# [tool.setuptools.packages.find]
# include = ["radicalpy"]  # ["*"] by default

[tool.setuptools.package-data]
radicalpy = ["*.json"]

[tool.black]
line-length = 88

[tool.pydocstyle]
convention = "google"

[tool.pylint]
max-line-length = 88
disable = ["C0103"]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
disallow_untyped_defs = true
disallow_untyped_calls = true
